infrastructure/argocd/resources/gateway-route.yaml
---
# https://github.com/argoproj/argo-helm/blob/main/charts/argo-cd/README.md#gateway-api-httproute
# https://argo-cd.readthedocs.io/en/stable/operator-manual/ingress/#gateway-api-example
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-httproute

spec:
  parentRefs:
    - name: primary-gateway
      namespace: envoy-gateway-system
      sectionName: https

  hostnames:
    - argocd.sidewinder.lan

  rules:
    - backendRefs:
        - name: argocd-server # SVC name (internal IP:PORT).
          port: 443 # External port through main-gateway.
      matches:
        - path:
            type: PathPrefix
            value: /
